# ChangeLog for sci-libs/libsufr
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libsufr-0.6.4 (09 May 2015)

  09 May 2015; AstroFloyd <AstroFloyd@gmail.com> -libsufr-0.6.2.ebuild,
  +libsufr-0.6.4.ebuild:
  Version bump

  05 May 2015; AstroFloyd <AstroFloyd@gmail.com>
  -files/libsufr-0.3.0-multilib.patch:
  Removed obsolete files/ directory

*libsufr-0.6.3 (05 May 2015)
*libsufr-0.6.2 (05 May 2015)

  05 May 2015; AstroFloyd <AstroFloyd@gmail.com> -libsufr-0.4.1.ebuild,
  -libsufr-0.5.2.ebuild, +libsufr-0.6.2.ebuild, +libsufr-0.6.3.ebuild:
  Version bump

*libsufr-0.5.4 (27 Oct 2013)

  27 Oct 2013; AstroFloyd <AstroFloyd@gmail.com> -libsufr-0.3.3.ebuild,
  +libsufr-0.5.4.ebuild:
  Version bump

*libsufr-0.4.1 (13 Jan 2013)

  13 Jan 2013; AstroFloyd <AstroFloyd@gmail.com> +libsufr-0.4.1.ebuild:
  Updated libSUFR to 0.4.1, added VERSION to doc files, added ChangeLog
	to git repo, keep one older version

*libsufr-0.3.3 (5 May 2012)

  13 Jan 2013; Kacper Kowalik (Xarthisius) +libsufr-0.3.3.ebuild:
  Version bump, drop old, don't install unnecessary doc files

*libsufr-0.3.2 (04 Mar 2012)

  04 Mar 2012; AstroFloyd <AstroFloyd@gmail.com> +libsufr-0.3.2.ebuild:
  Added sci-libs/libsufr-0.3.2

*libsufr-0.3.1 (13 Feb 2012)

  13 Feb 2012; AstroFloyd <AstroFloyd@gmail.com> +libsufr-0.3.1.ebuild,
  metadata.xml:
  Added an ebuild for libSUFR v0.3.1, updated email address in metadata.xml

*libsufr-0.3.0 (09 Nov 2011)

  09 Nov 2011; Kacper Kowalik <xarthisius@gentoo.org> +libsufr-0.3.0.ebuild,
  +files/libsufr-0.3.0-multilib.patch, +metadata.xml:
  Initial import, ebuild written by AstroFloyd <AstroFloyd@gmail.com>,
  edited by me
